# hectic-rs

./: .gitignore  Cargo.toml  build.rs  readme.md
benches/: bench.rs
pkg/: hectic-rs.js  hectic-rs_bg.d.ts  hectic-rs_bg.js  hectic-rs_bg.wasm
src/: components.rs  graphics.rs  lib.rs  main.rs  networking.rs  renderer.rs  resources.rs  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  stages.rs  systems.rs
src/resources/sources/: background.xcf  bat.xcf  clouds.xcf  credits.xcf  fog.xcf  graveyard.xcf  hallway.xcf  nightSky.xcf  portrait.xcf  reference.xcf
src/systems/: bullets.rs  mod.rs  rendering.rs
src/tileset/: sprites.tsx  stage_one.tmx
wasm/: build.sh  index.html
yaap/: Cargo.toml
yaap/src/: lib.rs
