[package]
name = "hectic-rs"
version = "0.1.0"
authors = ["Ashley Ruglys <ashley.ruglys@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = { version = "0.16.1", default-features = false, features = ["specs-derive"] }
winit = { version = "0.22.2", features = ["serde"] }
wgpu = "0.6.0"
image = { version = "0.23.9", default-features = false, features = ["png"] }
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
arrayvec = "0.5.1"
futures = "0.3.5"
cgmath = "0.17.0"
zerocopy = "0.3.0"
either = "1.6.1"
wgpu_glyph = { path = "../wgpu_glyph" }
env_logger = "0.7.1"
console_error_panic_hook = { version = "0.1.6", optional = true }
web-sys = { version = "0.3.45", optional = true }
wasm-bindgen-futures = { version = "0.4.18", optional = true }
log = "0.4.11"
console_log = "0.2.0"
serde = { version = "1.0.116", features = ["derive"] }
toml = "0.5.6"
line_drawing = "0.8.0"
palette = "0.5.0"
glyph_brush = "0.7.0"

[build-dependencies]
yaap = { path = "yaap" }

[features]
default = ["native"]
wasm = [
    "console_error_panic_hook",
    "web-sys",
    "wasm-bindgen-futures",
    "rand/wasm-bindgen",
    "specs/wasm-bindgen",
    "winit/web-sys",
]
native = ["specs/parallel"]
