[package]
name = "hectic-rs"
version = "0.1.0"
authors = ["Ashley Ruglys <ashley.ruglys@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = { version = "0.16.1", default-features = false, features = ["specs-derive"] }
winit = { version = "0.23.0", features = ["web-sys", "serde"] }
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", branch = "gecko" }
image = { version = "0.23.12", default-features = false, features = ["png"] }
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
arrayvec = "0.5.2"
futures = "0.3.8"
cgmath = "0.17.0"
zerocopy = "0.3.0"
either = "1.6.1"
wgpu_glyph = { git = "https://github.com/expenses/wgpu_glyph", branch = "drawmode" }
env_logger = "0.8.2"
console_error_panic_hook = { version = "0.1.6", optional = true }
web-sys = { version = "0.3.46", optional = true }
wasm-bindgen-futures = { version = "0.4.19", optional = true }
log = "0.4.11"
console_log = "0.2.0"
serde = { version = "1.0.117", features = ["derive"] }
toml = "0.5.7"
line_drawing = "0.8.0"
palette = "0.5.0"
glyph_brush = "0.7.0"

[build-dependencies]
yaap = { path = "yaap" }

[features]
default = ["native"]
wasm = [
    "console_error_panic_hook",
    "web-sys",
    "wasm-bindgen-futures",
    "rand/wasm-bindgen",
    "specs/wasm-bindgen",
]
native = ["specs/parallel"]
