[package]
name = "yaap"
version = "0.1.0"
authors = ["Ashley Ruglys <ashley.ruglys@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
case_style = "0.2.1"
texture_packer = { git = "https://github.com/expenses/texture_packer", branch = "row-padding" }
codegen = "0.1.3"
